# secret

./: .cliffignore  Cargo.toml  README.md  shell.nix
examples/: read.rs
src/: lib.rs  secret.rs  serde.rs
src/flows/: mod.rs  read-from-command.rs  read-from-keyring.rs
