[package]
name = "secret-flows"
description = "I/O-free library to retrieve secrets from different sources"
version = "0.1.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = []
keywords = ["secret", "flow", "io-free", "command", "keyring"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/secret-flows/latest/secret_flows"
repository = "https://github.com/pimalaya/secret"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
default = []
keyring = ["dep:keyring-flows"]
command = ["dep:memchr", "dep:process-flows"]
std = ["keyring-flows?/std", "process-flows?/std"]
serde = ["dep:serde", "keyring-flows?/serde", "process-flows?/serde", "secrecy/serde"]

[dev-dependencies]
env_logger = "0.11"
keyring-flows = { version = "0.1", features = ["std"] }
process-flows = { version = "0.1", features = ["std"] }
toml = "0.8"

[dependencies]
keyring-flows = { version = "0.1", default-features = false, optional = true }
log = "0.4"
memchr = { version = "2.7", optional = true }
process-flows = { version = "0.1", default-features = false, optional = true }
secrecy = "0.10"
serde = { version = "1", features = ["derive"], optional = true }

[patch.crates-io]
keyring-flows.git = "https://github.com/pimalaya/keyring"
process-flows.git = "https://github.com/pimalaya/process"
